Reduced svh value to prevent content overflowing screen

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100svh;
+  height: 95svh;
 }
 
 .home-title {
